--- a/index.html
+++ b/index.html
@@ -4,117 +4,11 @@
     <title>My Personal Finance</title>
     <link rel="icon" href="./public/money-bag.png" type="image/x-icon" />
   </head>
-  <script>
-    class BankPosting {
-      constructor(category, type, value) {
-        if (type !== "income" && type !== "expense")
-          throw new Error("Invalid type");
-        if (value < 0) throw new Error("Invalid value");
-        if (category === "") throw new Error("Invalid category");
-        this.category = category;
-        this.type = type;
-        this.value = value;
-      }
-    }
-
-    function roundValues(value) {
-      return Math.round(value * 100) / 100;
-    }
-
-    function calculateFee(salary) {
-      return roundValues(salary * 0.1);
-    }
-
-    function calculateIncome(salary) {
-      return roundValues(salary * 0.005);
-    }
-
-    function calculateDistributionOfFees(bankPostings, total) {
-      feeDistribution = [];
-      for (bankPost of bankPostings) {
-        if (bankPost.type === "expense") {
-          percentage = roundValues((bankPost.value / total) * 100);
-          feeDistribution.push({
-            category: bankPost.category,
-            percentage
-          });
-        }
-      }
-      return feeDistribution;
-    }
-
-    function calculateBalance(inicialBalance, bankPostings) {
-      totalizer = {
-        balance: 0,
-        inicialBalance,
-        totalIncome: 0,
-        totalExpense: 0,
-        income: 0,
-        fees: 0,
-        feeDistribution: []
-      };
-      totalizer.balance = bankPostings.reduce((accumulator, currentValue) => {
-        if (currentValue.type === "expense") {
-          totalizer.totalExpense += currentValue.value;
-          return accumulator - currentValue.value;
-        }
-        if (currentValue.type === "income") {
-          totalizer.totalIncome += currentValue.value;
-          return accumulator + currentValue.value;
-        }
-      }, inicialBalance);
-
-      totalizer.feeDistribution = calculateDistributionOfFees(
-        bankPostings,
-        totalizer.totalExpense
-      );
-
-      isBallanceNegative = totalizer.balance < 0;
-      if (isBallanceNegative) {
-        fees = calculateFee(totalizer.balance);
-        totalizer.fees = fees;
-        totalizer.balance += fees;
-      }
-      if (!isBallanceNegative) {
-        income = calculateIncome(totalizer.balance);
-        totalizer.income = income;
-        totalizer.balance += income;
-      }
-      totalizer.balance = roundValues(totalizer.balance);
-      return totalizer;
-    }
-
-    januaryBankPosting = [
-      new BankPosting("Salary", "income", 3000),
-      new BankPosting("Rent", "expense", 1000),
-      new BankPosting("Light bill", "expense", 200),
-      new BankPosting("Water bill", "expense", 100),
-      new BankPosting("Internet", "expense", 100),
-      new BankPosting("Transport", "expense", 300),
-      new BankPosting("Food", "expense", 500),
-      new BankPosting("Fun", "expense", 300)
-    ];
-    totalizerJanuary = calculateBalance(0, januaryBankPosting);
-
-    console.log(totalizerJanuary);
-
-    februaryBankPosting = [
-      new BankPosting("Salary", "income", 3000),
-      new BankPosting("Rent", "expense", 1200),
-      new BankPosting("Ligth bill", "expense", 250),
-      new BankPosting("Water bill", "expense", 100),
-      new BankPosting("Internet", "expense", 100),
-      new BankPosting("Fun", "expense", 500),
-      new BankPosting("Food", "expense", 1000)
-    ];
-
-    totalizerFebruary = calculateBalance(
-      totalizerJanuary.balance,
-      februaryBankPosting
-    );
-
-    console.log(totalizerFebruary);
-  </script>
+  <script src="BankPosting.js"></script>
+  <script src="Month.js"></script>
+  <script src="util.js"></script>
+  <script src="main.js"></script>
+  <script src="test.js"></script>
   <body>
     <h1>Hello World Html</h1>
   </body>
