interacting with the DOM

--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <title>My Personal Finance</title>
     <link rel="icon" href="./public/money-bag.png" type="image/x-icon" />
   </head>
-  <script src="BankPosting.js"></script>
-  <script src="Month.js"></script>
-  <script src="util.js"></script>
-  <script src="main.js"></script>
-  <script src="test.js"></script>
   <body>
-    <h1>Hello World Html</h1>
+    <h3>Personal Finances</h3>
+    <input id="month" type="text" placeholder="Month" />
+    <input id="category" type="text" placeholder="Category" />
+    <input id="bookPostType" type="text" placeholder="Type" />
+    <input id="value" type="number" placeholder="Value" />
+    <button id="addBankPost">Add new bank post</button>
+    <div id="app"></div>
+    <script src="BankPost.js"></script>
+    <script src="Month.js"></script>
+    <script src="Year.js"></script>
+    <script src="util.js"></script>
+    <script src="main.js"></script>
+    <script src="test.js"></script>
   </body>
 </html>
